margin correction and functioning dark mode

--- a/css/main.css
+++ b/css/main.css
@@ -7,13 +7,36 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
-html, body{
-    height: 100%;
+:root {
+  --background: #F5F5F5;
+  --text: #000;
+}
+
+.darkmode {
+  --background: #212121;
+  --text: #fff;
+}
+
+.dark-mode-button {
+  background-color: #0082e6; /*match header*/
+  border: none;
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+body, html {
+  height: 100%;
+}
+
+body, footer{
+    background-color: var(--background);
+    color: var(--text);
 }
 
 .gallery img {
-    max-width: 25%; /* Adjust to your desired width */
-    height: auto; /* Adjust to your desired height */
+    max-width: 25%;
+    height: auto;
 }
 
 .title-container {
@@ -44,8 +67,9 @@ h3 {
 p {
     font-size: 18px;
     line-height: 1.6;
-    color: #333;
+    margin-top: 20px;
     margin-bottom: 20px;
+    
 }
 
 /* Style the centered list */
@@ -76,10 +100,14 @@ li{
     display: flex;
     flex-direction: row;
     align-items: center;
+    width: 100%;
   }
   
   .photo {
-    width: 25%;
+    max-width: 25%;
+    margin-left: 25px;
+    margin-top: 25px;
+    margin-right: 20px;
     height: auto;
   }
 
@@ -228,7 +256,7 @@ label.logo {
 }
 
 /* Media query for responsive design */
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1050px) {
   nav ul {
       float: none;
       text-align: center;
@@ -241,7 +269,9 @@ label.logo {
   }
 
   .photo {
-    width: 60%;
+    min-width: 60%;
+    margin-left: 0;
+    margin-bottom: 10px;
   }
 
   .container {
@@ -261,6 +291,7 @@ textarea {
 footer {
     text-align: center;
     padding: 10px;
+    
 }
 
 .image-container {
